<resources>
    <string name="app_name">PetCare</string>
    <string name="welcome_to_">Welcome to the world of dog parents!</string>
    <string name="get_start">Get Started</string>
    <string name="acc">I already have an account</string>
    <string name="task_recomm">TRACK</string>
    <string name="based_on_th">Remember your pet\'s daily activities through our smart tracking feature. Don\'t ever forget to procrastinate on lower-frequency tasks because PAWSITIVE knows it all!</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="pereal_">PEREAL!</string>
    <string name="have_you_ev">
Have you ever been frustrated with the amount of unreliable infos you received ? Don\'t worry! By doing a quick search, relevant and reliable videos and posts will pop up to address your pet\'s need!
</string>
    <string name="community">Community Engagement</string>
    <string name="this_data">This data retrieved will be used later for vet appointments and exchanged among the community.
</string>
    <string name="what_your">What\'s your First Name and Email?</string>
    <string name="available">The app is only available to dog owners</string>
    <string name="Dad">Puppy Dad</string>
    <string name="Mom">Puppy Mom</string>
    <string name="welcome">Welcome to the world of pet parents! Choose your role!</string>
    <string name="choose">Choose the breed:</string>
    <string name="french_dog">French bulldog</string>
    <string name="labrador_dog">Labrador retriever</string>
    <string name="golden_dog">Golden retriever</string>
    <string name="german_dog">German shepherd</string>
    <string name="poodle_dog">Poodles</string>
    <string name="other">Other</string>
    <string name="what_pet_name">What\'s their name?</string>
    <string name="idk">I Don\'t Know</string>
    <string name="birthday">What\'s your four legged friend\’s birthday?</string>
    <string name="what_gender">What\'s their gender ?</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="unknown">N/A</string>
    <string name="upload">Upload a profile pic</string>
    <string name="skip">Skip</string>
    <string name="go">Continue</string>
    <string name="choose_image">Choose Image</string>
    <string name="alright_you">You\’re all set! Welcome to PAWSITIVE</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tracker">Community</string>

    <string name="explore">Explore</string>
    <string name="home">Home</string>
    <string name="discover">Discover</string>
    <string name="community2">Community</string>
    <string name="profile">Profile</string>
    <string name="my_friends">My friends</string>
    <string name="nearby">Nearby</string>
    <string name="view_all">view all</string>
    <string name="blogs">Blogs</string>
    <string name="videos">Videos</string>
    <string name="post">Post</string>
    <string name="expert">Expert</string>
    <string name="most_voted">Most Voted</string>
    <string name="creator">Creator</string>
    <string name="pawsitive">PAWSITIVE</string>
    <string name="discover2">DISCOVER</string>
    <string name="connect">CONNECT</string>
    <string name="upcoming_to">Upcoming today</string>


    <!-- ... (other string resources) ... -->

    <string-array name="start_times">
        <item>Select Time</item>
        <item>1:00 AM</item>
        <item>2:00 AM</item>
        <item>3:00 AM</item>
        <item>4:00 AM</item>
        <item>5:00 AM</item>
        <item>6:00 AM</item>
        <item>7:00 AM</item>
        <item>8:00 AM</item>
        <item>9:00 AM</item>
        <item>10:00 AM</item>
        <item>11:00 AM</item>
        <item>12:00 PM</item>
        <item>1:00 PM</item>
        <item>2:00 PM</item>
        <item>3:00 PM</item>
        <item>4:00 PM</item>
        <item>5:00 PM</item>
        <item>6:00 PM</item>
        <item>7:00 PM</item>
        <item>8:00 PM</item>
        <item>9:00 PM</item>
        <item>10:00 PM</item>
        <item>11:00 PM</item>
        <item>12:00 AM</item>
    </string-array>

    <string name="select_start_time">Select Start Time</string>

    <string-array name="interval_options">
        <item>Every day</item>
        <item>Once a week</item>
        <item>Once a month</item>
        <item>Custom</item>
    </string-array>

    <string name="select_interval">Select Interval</string>


    <string name="enter_notes">Enter notes (if any)</string>

    <string name="k_uppaws">440k\nUpPaws</string>

    <string name="furfriends">FurFriends</string>

    <string name="charlie">Charlie</string>

    <string name="your_groups">Your Groups</string>
    <string name="share_a_pic">Share a picture</string>
    <string name="you_can_sel">You can select multiple community groups @ the same tm</string>
    <string name="brushing_th">Brushing the teeth for CiCi</string>
    <string name="emma_tran">Emma Tran</string>
    <string name="dodo">DoDo</string>
</resources>