<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".onboarding.Onboard7Fragment">


<Button
    android:id="@+id/back_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="640dp"
    android:text="@string/back"
    android:background="@color/white"
    android:textColor="@color/purple"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.114"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

<Button
    android:id="@+id/next_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="640dp"
    android:text="@string/next"
    android:background="@color/purple"
    android:textColor="@color/white"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.876"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcome_message"
        android:layout_width="318dp"
        android:layout_height="56dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="1dp"
        android:gravity="center_vertical"
        android:lineSpacingExtra="5sp"
        android:text="@string/choose"
        android:textAppearance="@style/task_recomm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.268"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/dog1_view"
        android:layout_width="132dp"
        android:layout_height="100dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="240dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_message"
        app:srcCompat="@drawable/image_place"
        android:background="@drawable/image_border" />

    <TextView
        android:id="@+id/dog1_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginTop="80dp"
        android:text="@string/german_dog"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_message" />

    <ImageView
        android:id="@+id/dog2_view"
        android:layout_width="132dp"
        android:layout_height="100dp"
        android:layout_marginTop="184dp"
        android:layout_marginEnd="244dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_message"
        app:srcCompat="@drawable/image_place"
        android:background="@drawable/image_border" />

    <TextView
        android:id="@+id/dog2_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginTop="228dp"
        android:text="@string/golden_dog"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_message"
        />

    <ImageView
        android:id="@+id/dog3_view"
        android:layout_width="132dp"
        android:layout_height="100dp"
        android:layout_marginTop="324dp"
        android:layout_marginEnd="244dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_message"
        app:srcCompat="@drawable/image_place"
        android:background="@drawable/image_border" />

    <TextView
        android:id="@+id/dog3_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginTop="368dp"
        android:text="@string/labrador_dog"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_message" />

    <ImageView
        android:id="@+id/dog4_view"
        android:layout_width="132dp"
        android:layout_height="100dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_message"
        app:srcCompat="@drawable/image_place"
        android:background="@drawable/image_border" />

    <TextView
        android:id="@+id/dog4_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="248dp"
        android:layout_marginTop="80dp"
        android:text="@string/french_dog"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_message" />

    <ImageView
        android:id="@+id/dog5_view"
        android:layout_width="132dp"
        android:layout_height="100dp"
        android:layout_marginTop="184dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_message"
        app:srcCompat="@drawable/image_place"
        android:background="@drawable/image_border" />

    <TextView
        android:id="@+id/dog5_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="260dp"
        android:layout_marginTop="228dp"
        android:text="@string/poodle_dog"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_message" />

    <ImageView
        android:id="@+id/dog6_view"
        android:layout_width="132dp"
        android:layout_height="100dp"
        android:layout_marginTop="324dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_message"
        app:srcCompat="@drawable/image_place"
        android:background="@drawable/image_border" />

    <TextView
        android:id="@+id/dog6_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="270dp"
        android:layout_marginTop="368dp"
        android:text="@string/other"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_message" />


</androidx.constraintlayout.widget.ConstraintLayout>