<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".onboarding.Onboard12Fragment">


    <TextView
        android:id="@+id/welcome_message"
        android:layout_width="318dp"
        android:layout_height="56dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="1dp"
        android:gravity="center_vertical"
        android:lineSpacingExtra="5sp"
        android:text="@string/upload"
        android:textAppearance="@style/task_recomm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.268"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/parag3"
        android:layout_width="329dp"
        android:layout_height="51dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="172dp"
        android:gravity="center_vertical"
        android:lineSpacingExtra="2sp"
        android:text="@string/available"
        android:textAppearance="@style/based_on_th"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.305"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/uploadImageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/ic_placeholder_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/parag3" />

    <Button
        android:id="@+id/chooseImageButton"
        android:layout_width="121dp"
        android:layout_height="46dp"
        android:layout_marginTop="16dp"
        android:background="@color/light_orange"
        android:text="@string/choose_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uploadImageView" />


    <Button
        android:id="@+id/nextbutton"
        android:layout_width="305dp"
        android:layout_height="38dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="24dp"
        android:width="327dp"
        android:height="40dp"
        android:textSize="15sp"
        android:textAllCaps="false"
        android:background="@drawable/button_long_next"
        android:clipToOutline="true"
        android:text="@string/next"
        android:textColor="@color/white"
        android:viewportWidth="327"
        android:viewportHeight="40"
        app:layout_constraintBottom_toTopOf="@+id/skipbutton"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/skipbutton"
        android:layout_width="305dp"
        android:layout_height="32dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="56dp"
        android:layout_marginBottom="132dp"
        android:width="327dp"
        android:height="40dp"
        android:textSize="15sp"
        android:textAllCaps="false"
        android:background="@drawable/button_long_back"
        android:clipToOutline="true"
        android:text="@string/skip"
        android:textColor="@color/black"
        android:viewportWidth="327"
        android:viewportHeight="40"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>