<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="416dp"
    android:layout_height="760dp"
    android:background="@drawable/front_pic"
    tools:context=".onboarding.Onboard1Fragment">


    <TextView
        android:id="@+id/pawsitive"
        android:layout_width="201dp"
        android:layout_height="83dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="106dp"
        android:gravity="center_horizontal|center_vertical"
        android:lineSpacingExtra="3sp"
        android:text="@string/pawsitive"
        android:textStyle="bold"
        android:textAppearance="@style/pawsitive"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/welcome_to_"
        android:layout_width="221dp"
        android:layout_height="40dp"
        android:layout_marginEnd="99dp"
        android:layout_marginBottom="273dp"
        android:gravity="center_horizontal|center_vertical"
        android:lineSpacingExtra="2sp"
        android:text="@string/welcome_to_"
        android:textAppearance="@style/welcome_to_"
        app:layout_constraintBottom_toTopOf="@+id/start_button"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/start_button"
        android:layout_width="255dp"
        android:layout_height="40dp"
        android:layout_marginTop="424dp"
        android:pathData="M0 0V40H249V0"
        android:text="@string/get_start"
        android:textSize="14sp"
        android:textAllCaps="false"
        android:background="@drawable/button_orange"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/acc_button"
        android:layout_width="255dp"
        android:layout_height="40dp"
        android:layout_marginTop="476dp"
        android:outlineSpotShadowColor="@color/black"
        android:pathData="M0 0V40H249V0"
        android:text="@string/acc"
        android:textSize="14sp"
        android:textAllCaps="false"
        android:background="@drawable/button_clear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/eli1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="567dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.206"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/fb" />

    <ImageView
        android:id="@+id/eli2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="569dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/twitter" />

    <ImageView
        android:id="@+id/eli3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="568dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.785"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/google" />


</androidx.constraintlayout.widget.ConstraintLayout>